--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a {
 
 .header {
   background: #d6d3c8;
-  padding: 20px;
+  padding: 20px 0;
 }
 
 .header-menu li a {
@@ -43,14 +43,20 @@ a {
   padding: 0 10px;
 }
 
+.header-menu ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .header-menu li:first-child a {
   padding-left: 0px;
 }
 
 @media (max-width: 739px) {
+  .header-menu ul {
+    margin-top: 10px;
+  }
 }
-
-/*MAIN*/
 
 /*SIDE NAV*/
 
@@ -101,19 +107,39 @@ a {
   background-position: 0 calc(-24px * 5);
 }
 
-@media (min-width: 740px) and (max-width: 980px) {
-}
-
-@media (max-width: 739px) {
+@media (max-width: 767px) {
+  .side-nav {
+    background: none;
+  }
+  .side-nav ul {
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .side-nav li {
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+  .side-nav li a::before {
+    top: 0;
+    margin: 0;
+  }
+  .side-nav li a {
+    width: 44px;
+    height: 44px;
+    overflow: hidden;
+    padding: 10px;
+    border: none;
+    background: #252525;
+    border-radius: 4px;
+  }
 }
 
 /* Produtos */
 
-.produtos {
-}
-
 .produtos h1 {
   font-size: 2.25em;
+  font-weight: bold;
 }
 
 .adicionar-produtos {
@@ -168,12 +194,6 @@ a {
   font-weight: bold;
   width: 70px;
   display: inline-block;
-}
-
-@media (min-width: 740px) and (max-width: 980px) {
-}
-
-@media (max-width: 739px) {
 }
 
 /*Footer*/
